# ebug2014-ros

./: LICENSE  README.md  blob_test.py  camera.py  circle.py  clustering.py  discover.py  get_robot_position.py
data/: README.md
docs/: ebug2014-system-doc.html  python2-opencv-ros-installation.md  python3-opencv-installation.md  ros-architecture.odg
docs/guide/: README.html  README.org  README.tex  beamerthemebjeldbak.sty  discover.py  nrf.py
ebug2014_rsys/: CMakeLists.txt  package.xml
ebug2014_rsys/launch/: main.launch
ebug2014_rsys/src/: EBugData.h  Eigen  control.cpp  control.py  debug.h  localization.cpp  visualization.py
ebug_swarm_control/: CMakeLists.txt  package.xml
ebug_swarm_control/src/: control_node.cpp  newlog.txt
ebug_swarm_localization/: CMakeLists.txt  package.xml
ebug_swarm_localization/src/: EBugData.cpp  EBugData.h  Makefile  Project.ede  localization_node.cpp  main.cpp
ebug_swarm_localization/src/Eigen/src/: commands.sh  commands.sh~
ebug_swarm_msg/: CMakeLists.txt  package.xml
ebug_swarm_msg/msg/: blob.msg  dataArray.msg  frame.msg
ebug_swarm_planning/: CMakeLists.txt  package.xml
ebug_swarm_planning/launch/: main.launch
ebug_swarm_visualization/: CMakeLists.txt  package.xml
launch/: main.launch
libs/: ebug_tab.json  nrf.py
localization/: package.xml
scripts/: blob_test.py  camera.py  camera_test.py  camera_tkinter.py  circle.py  clustering.py  dance.py  debruijn.py  discover.py  ebug_tab.json  ebug_test.py  flash.py  get_robot_position.py  motor_control.py
traj_calc/: package.xml
visualization/: package.xml
(+23 files in other folders)
